--- a/app/views/psd-revised-flow/add-new-product/happy-photo-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/happy-photo-bl.html
@@ -21,25 +21,25 @@ Uploaded photo – {{ serviceName }} – GOV.UK Prototype Kit
 
         <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Uploaded photo</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Imported photo from Barcode Lookup</h1>
 
 
 
 
       <div class="how-to-photo-column govuk-!-margin-bottom-6">
-        <img src="../../public/images/samsung-buds.png" alt="Car seat 1" width="300" height="300">
+        <img src="../../public/images/bosch.png" alt="Car seat 1" width="300" height="300">
         <div class="how-to-photo-container govuk-!-margin-top-1">
         <img src="../../public/images/rotate.svg" alt="Tick">
         <a href="#">Rotate image</a>
       </div>
       </div>
 
-      <form class="form" action="happy-photo" method="post">
+      <form class="form" action="happy-photo-bl" method="post">
 
     
     <div class="button-container">
       <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
-        Save and continue
+        Use this photo
       </button>
         <p class="govuk-body-m">or</p>
 
