--- a/app/views/psd-revised-flow/add-new-product/product-manual.html
+++ b/app/views/psd-revised-flow/add-new-product/product-manual.html
@@ -22,11 +22,11 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 
       <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">phil&teds sport™</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Samsung Galaxy Buds 2</h1>
 
 
       <div class="barcode-column govuk-!-margin-bottom-8">
-        <img src="../../public/images/p+t-taken.png" alt="barcode" width="217" height="217">
+        <img src="../../public/images/samsung-buds.png" alt="barcode" width="217" height="217">
         <p class="govuk-body">
           <a href="add-a-photo" class="govuk-link govuk-link--no-visited-state">Change</a>
         </p>      
@@ -40,10 +40,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             PSD reference
           </dt>
           <dd class="govuk-summary-list__value">
-            psd-824
+            psd-701
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd"><span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-manual"><span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
 <div class="govuk-summary-list__row">
@@ -51,10 +51,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Brand name
           </dt>
           <dd class="govuk-summary-list__value">
-            phil&teds
+            Samsung
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -62,10 +62,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product name
           </dt>
           <dd class="govuk-summary-list__value">
-            sport™
+            Galaxy Buds 2
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -73,10 +73,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Country of origin
           </dt>
           <dd class="govuk-summary-list__value">
-            China
+            South Korea
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> address</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> address</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -84,11 +84,12 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            <p class="govuk-body">For 0-5 years. Max load 15kg. Seat width 30cm. Weighs 3.2kg. Made of 600d 100% polyester. Folded it's (H) 41cm x (W) 65cm x (L) 90cm. It has a gear tray and adjustable handlebars.</p>
+            <p class="govuk-body">Comes in box 15 x 10 x 4 cm, Bluetooth earphones, weight 52g 
+            </p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -101,7 +102,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -110,11 +111,11 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Webpage
           </dt>
           <dd class="govuk-summary-list__value">
-            <p class="govuk-body">https://uk.philandteds.com/products/sport-pram</p>
+            <p class="govuk-body">https://www.samsung.com/uk/business/audio-sound/galaxy-buds/galaxy-buds2-graphite-sm-r177nzkaeua/</p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -127,10 +128,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product category
           </dt>
           <dd class="govuk-summary-list__value">
-            Baby & Toddler
+            Electrical
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -138,10 +139,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product sub-category
           </dt>
           <dd class="govuk-summary-list__value">
-            Baby Transport Accessories
+            Earphones
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
       </dl>
@@ -153,10 +154,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Barcode
           </dt>
           <dd class="govuk-summary-list__value">
-            9 420015 715897
+            7 346785 789345
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -164,10 +165,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Other product identifiers
           </dt>
           <dd class="govuk-summary-list__value">
-            ASIN: L87SDM5K2U
+            ASIN: 743525
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+            <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
       </dl>    
@@ -180,10 +181,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
           Market date
         </dt>
         <dd class="govuk-summary-list__value">
-          Before 1 January 2021
+          After 1 January 2021
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
+          <a class="govuk-link" href="edit-product-information-manual">Change<span class="govuk-visually-hidden"> name</span></a>
         </dd>
     </dl>   
 
