--- a/app/views/psd-revised-flow/add-new-product/v1/edit-product-information-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/v1/edit-product-information-bl.html
@@ -13,6 +13,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
 }) }}
 {% endblock %}
 
+{% set title = "Add businesses and their roles in the supply chain " %}
 
 {% block content %}
 
@@ -33,7 +34,7 @@ Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
         <div class="govuk-form-group">
           <label class="govuk-label" for="trading_name">Brand name (mandatory)</label>
           <div class="govuk-hint govuk-!-font-size-16" id="trading_name-hint">For example, ‘Dyson’ or ‘Sony’.</div>
-          <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="Bosch">
+          <input class="govuk-input govuk-!-width-two-thirds" id="business-details-trading_name" name="business-details-trading_name" type="text" aria-describedby="trading_name-hint" value="phil&teds">
         </div>
 
         <div class="govuk-form-group">
