--- a/app/views/psd-revised-flow/add-new-product/v1/product-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/v1/product-bl.html
@@ -22,13 +22,14 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 
         <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Bosch Series 6 WGG24409GB</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-2">phil&teds sport™</h1>
+      <span class="govuk-caption-m govuk-!-margin-bottom-9">Imported from Barcode Lookup</span>
 
 
       <div class="barcode-column govuk-!-margin-bottom-8">
-        <img src="../../public/images/bosch.png" alt="barcode" width="217" height="217">
+        <img src="../../public/images/p+t-stock.png" alt="barcode" width="217" height="217">
         <p class="govuk-body">
-          <a href="add-a-photo-bl" class="govuk-link govuk-link--no-visited-state">Change</a>
+          <a href="add-a-photo" class="govuk-link govuk-link--no-visited-state">Change</a>
         </p>      
       </div>
 
@@ -40,7 +41,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Brand name
           </dt>
           <dd class="govuk-summary-list__value">
-            Bosch 
+            phil&teds
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -51,7 +52,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product name
           </dt>
           <dd class="govuk-summary-list__value">
-            Series 6 WGG24409GB
+            sport™
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> date of birth</span></a>
@@ -62,10 +63,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Country of origin
           </dt>
           <dd class="govuk-summary-list__value">
-            
+            China
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> address</span></a>
+            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> address</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -73,12 +74,11 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Free 5 Year Warranty! (Via Registration) Capacity 9kg 1400rpm Anti Stain Active Water Plus Eco Silence Drive Speed Perfect LED Display Colour: White With Black Door Energy Rating (A-G): AH848 x W598 x D590 mm.
             <p class="govuk-body"></p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -117,10 +117,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product category
           </dt>
           <dd class="govuk-summary-list__value">
-            
+            Baby & Toddler
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -128,7 +128,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product sub-category
           </dt>
           <dd class="govuk-summary-list__value">
-            Home & Garden > Household Appliances > Laundry Appliances > Washing Machines
+            Baby Transport Accessories
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> date of birth</span></a>
@@ -143,7 +143,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Barcode
           </dt>
           <dd class="govuk-summary-list__value">
-            9 324652 876225
+            9 420015 715897
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -154,7 +154,7 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Other product identifiers
           </dt>
           <dd class="govuk-summary-list__value">
-            ASIN: 934587
+            ASIN: L87SDM5K2U
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> date of birth</span></a>
