--- a/app/views/psd-revised-flow/add-new-product/v1/product-manual.html
+++ b/app/views/psd-revised-flow/add-new-product/v1/product-manual.html
@@ -16,19 +16,19 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="product-bl" method="post">
+    <form class="form" action="product-manual" method="post">
 
-        <span class="govuk-caption-l">{{title}}</span>
+      <span class="govuk-caption-l">{{title}}</span>
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Bosch Series 6 WGG24409GB</h1>
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-9">phil&teds sport™</h1>
 
 
       <div class="barcode-column govuk-!-margin-bottom-8">
-        <img src="../../public/images/bosch.png" alt="barcode" width="217" height="217">
+        <img src="../../public/images/p+t-taken.png" alt="barcode" width="217" height="217">
         <p class="govuk-body">
-          <a href="add-a-photo-bl" class="govuk-link govuk-link--no-visited-state">Change</a>
+          <a href="add-a-photo" class="govuk-link govuk-link--no-visited-state">Change</a>
         </p>      
       </div>
 
@@ -37,13 +37,24 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
       <dl class="govuk-summary-list govuk-!-margin-bottom-8">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
+            PSD reference
+          </dt>
+          <dd class="govuk-summary-list__value">
+            psd-824
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="edit-product-information-psd"><span class="govuk-visually-hidden"> name</span></a>
+          </dd>
+        </div>
+<div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
             Brand name
           </dt>
           <dd class="govuk-summary-list__value">
-            Bosch 
+            phil&teds
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -51,10 +62,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product name
           </dt>
           <dd class="govuk-summary-list__value">
-            Series 6 WGG24409GB
+            sport™
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -62,10 +73,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Country of origin
           </dt>
           <dd class="govuk-summary-list__value">
-            
+            China
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> address</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> address</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -73,12 +84,11 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Description
           </dt>
           <dd class="govuk-summary-list__value">
-            Free 5 Year Warranty! (Via Registration) Capacity 9kg 1400rpm Anti Stain Active Water Plus Eco Silence Drive Speed Perfect LED Display Colour: White With Black Door Energy Rating (A-G): AH848 x W598 x D590 mm.
-            <p class="govuk-body"></p>
+            <p class="govuk-body">For 0-5 years. Max load 15kg. Seat width 30cm. Weighs 3.2kg. Made of 600d 100% polyester. Folded it's (H) 41cm x (W) 65cm x (L) 90cm. It has a gear tray and adjustable handlebars.</p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -87,11 +97,11 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product marking
           </dt>
           <dd class="govuk-summary-list__value">
-            <p class="govuk-body"></p>
+            <p class="govuk-body">CE</p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -100,11 +110,11 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Webpage
           </dt>
           <dd class="govuk-summary-list__value">
-            <p class="govuk-body"></p>
+            <p class="govuk-body">https://uk.philandteds.com/products/sport-pram</p>
           </dd>
           <dd class="govuk-summary-list__actions">
             <ul class="govuk-summary-list__actions-list">
-              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
+              <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> contact details</span></a></li>
             </ul>
           </dd>
         </div>
@@ -117,10 +127,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product category
           </dt>
           <dd class="govuk-summary-list__value">
-            
+            Baby & Toddler
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -128,10 +138,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Product sub-category
           </dt>
           <dd class="govuk-summary-list__value">
-            Home & Garden > Household Appliances > Laundry Appliances > Washing Machines
+            Baby Transport Accessories
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
       </dl>
@@ -143,10 +153,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Barcode
           </dt>
           <dd class="govuk-summary-list__value">
-            9 324652 876225
+            9 420015 715897
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> name</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -154,10 +164,10 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
             Other product identifiers
           </dt>
           <dd class="govuk-summary-list__value">
-            ASIN: 934587
+            ASIN: L87SDM5K2U
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="edit-product-information-bl">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+            <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> date of birth</span></a>
           </dd>
         </div>
       </dl>    
@@ -170,18 +180,20 @@ phil&teds sport™ – {{ serviceName }} – GOV.UK Prototype Kit
           Market date
         </dt>
         <dd class="govuk-summary-list__value">
+          Before 1 January 2021
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="edit-product-information-bl">Add<span class="govuk-visually-hidden"> name</span></a>
+          <a class="govuk-link" href="edit-product-information-psd">Change<span class="govuk-visually-hidden"> name</span></a>
         </dd>
     </dl>   
 
   <div class="button-container">
-    <button type="submit" class="govuk-button" data-module="govuk-button" id="not-found-it-1" name="not-found-it" value="yes">
-      Add to notification and create record 
+    <button type="submit" class="govuk-button" data-module="govuk-button" name="happy-with-photo" id="happy-with-photo-1" value="yes">
+      Add to notification
     </button>
   </div>
 
+  
 </form>
 
   {% endblock %}
