--- a/app/views/psd-revised-flow/add-new-product/v1/task-list-start.html
+++ b/app/views/psd-revised-flow/add-new-product/v1/task-list-start.html
@@ -26,9 +26,9 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
   <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Product safety notification incomplete</h2>
 
 
-  <p class="govuk-body">You have completed 1 of 6 sections.</p>
+  <p class="govuk-body">You have completed 0 of 6 sections.</p>
 
-  <p class="govuk-body govuk-!-margin-bottom-7">You must first complete Sections <span style="color:#d4351c;">1</span>, <span style="color:#d4351c;">2</span>, <span style="color:#d4351c;">3</span>, and <span style="color:#d4351c;">5</span> in order to access Section <span style="color:#d4351c;">6</span> for the final submission. Note that Section 4 is optional and can be completed after you have made your initial submission.</p>
+  <p class="govuk-body govuk-!-margin-bottom-7">You must first complete Sections <span style="color:#d4351c;">1</span>, <span style="color:#d4351c;">2</span>, and <span style="color:#d4351c;">3</span> in order to access Section <span style="color:#d4351c;">6</span> for the final submission. Note that Sections 4 and 5 are optional and can be completed after you have made your initial submission.</p>
 
 
 
@@ -48,7 +48,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
             <a href="search-products">Search for or add a product</a>
           </span>
 
-          <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
+          <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
         </li>
       </ul>
     </li>
@@ -64,15 +64,15 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
 
          <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            <a href="#">Add notification details</a>
+            Add notification details
           </span>
-          <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
+          <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Cannot start yet</strong>
 
         </li>
 
          <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            Add product safety and compliance details        
+            Add product safety and compliance details          
           </span>
 
           <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Cannot start yet</strong>
@@ -81,7 +81,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
 
         <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            Add product identification details     
+            Add product identification details       
           </span>
 
           <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Cannot start yet</strong>
@@ -105,7 +105,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
 
         <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            Search or add businesses and select their roles         
+            Search or add businesses and select their roles          
          </span>
          <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Cannot start yet</strong>
        </li>
@@ -157,7 +157,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
 
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">5. Add corrective actions  <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
+    <span class="app-task-list__section-number">5. Add corrective actions <span style="font-weight: normal; font-size: 16px;">(can be completed after the initial submission)</span>
   </h2>
   <ul class="app-task-list__items">
 
