--- a/app/views/psd-revised-flow/add-new-product/task-list-start.html
+++ b/app/views/psd-revised-flow/add-new-product/task-list-start.html
@@ -28,7 +28,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
 
   <p class="govuk-body">You have completed 0 of 6 sections.</p>
 
-  <p class="govuk-body govuk-!-margin-bottom-7">You must first complete Sections <span style="color:#d4351c;">1</span>, <span style="color:#d4351c;">2</span>, and <span style="color:#d4351c;">3</span> in order to access Section <span style="color:#d4351c;">6</span> for the final submission. Note that Sections 4 and 5 are optional and can be completed after you have made your initial submission.</p>
+  <p class="govuk-body govuk-!-margin-bottom-7">You must first complete Sections <span style="color:#d4351c;">1</span>, <span style="color:#d4351c;">2</span>, <span style="color:#d4351c;">3</span>, and <span style="color:#d4351c;">5</span> in order to access Section <span style="color:#d4351c;">6</span> for the final submission. Note that Section 4 is optional and can be completed after you have made your initial submission.</p>
 
 
 
@@ -157,7 +157,7 @@ Create a product safety notification – {{ serviceName }} – GOV.UK Prototype 
 
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">5. Add corrective actions <span style="font-weight: normal; font-size: 16px;">(can be completed after the initial submission)</span>
+    <span class="app-task-list__section-number">5. Add corrective actions  <span style="font-weight: normal; font-size: 16px; color: #d4351c;">*</span>
   </h2>
   <ul class="app-task-list__items">
 
