--- a/app/views/psd-revised-flow/add-new-product/add-a-barcode.html
+++ b/app/views/psd-revised-flow/add-new-product/add-a-barcode.html
@@ -45,7 +45,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-three-quarters">
         <label class="govuk-label" for="case-search-term">
-          Enter a product name, brand, barcode, ASIN or PSD ref
+          Enter a product name, brand, barcode or ASIN
         </label>
         <div class="govuk-input__wrapper opss-search__wrapper govuk-!-width-two-thirds">
           <input type="text" class="govuk-input" id="searchInput">
