--- a/app/views/psd-revised-flow/add-new-product/search-products.html
+++ b/app/views/psd-revised-flow/add-new-product/search-products.html
@@ -32,9 +32,6 @@
           <button type="submit" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-4" data-module="govuk-button">
             Add a new product
           </button>
-          <p class="govuk-body">
-            <a href="#" class="govuk-link govuk-link--no-visited-state">Add multiple products</a>
-          </p>
         </div>
       </div>
     </div>
@@ -77,7 +74,7 @@
 
 <!-- Filters & table -->
 
-<section class="govuk-grid-row" id="page-content">
+<section class="govuk-grid-row " id="page-content">
   <div class="govuk-grid-column-full">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-third">
@@ -86,8 +83,8 @@
 
             <div class="govuk-summary-list__row">
               <details id="teamDetails">
-                <summary class="summary-content govuk-!-margin-bottom-3 ">
-                  <a href="#" class="govuk-link govuk-link--no-underline govuk-link--no-visited-state" onclick="toggleDetails('teamDetails')">Team</a>
+                <summary class="summary-content govuk-!-margin-bottom-3 govuk-!-margin-top-1">
+                  <a href="#" class="govuk-link govuk-link--no-underline govuk-link--no-visited-state" onclick="toggleDetails('teamDetails')">Product owner</a>
                 </summary>
                 <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
                   <div class="govuk-checkboxes__item">
@@ -145,25 +142,17 @@
                 </div>
               </details>
             </div>
-            <div class="govuk-summary-list__row">
-              <details>
-                <summary class="summary-content govuk-!-margin-bottom-3 govuk-!-margin-top-3">
-                  <a href="#" class="govuk-link govuk-link--no-underline govuk-link--no-visited-state">Sub-category</a>
-                </summary>
-              </details>
-            </div>
           </dl>
         </div>
       </div>
             
       <div class="govuk-grid-column-two-thirds">
 
-              <p class="govuk-!-margin-bottom-3">Showing 1-10 of <strong>418</strong> results</p>
+        <p>Showing 1-10 of <strong>418</strong> results</p>
 
-              <div id="searchInfo"><p></p></div>
-
+        <div id="searchInfo"><p></p></div>
         
-          <div class="govuk-form-group ">
+          <div class="govuk-form-group">
             <table class="custom-table">
               <tbody>
               <tr>
